--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 
 .vs/TimeManager/FileContentIndex/0244a24d-55f0-490a-a96f-6aad64985285.vsidx
 AppUsageTimeManager/
+*.vsidx
+.vs/TimeManager/v17/.suo
